@@ -1,3 +1,8 @@
+2003-06-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* mklibgcc.in: Propagate .note.GNU-stack section if needed into
+	the .hidden assembly stubs.
+
 2003-06-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* function.c (trampolines_created): New variable.
